test/compile_errors/stage1/test/reject_extern_variables_with_initializers.zig
extern var foo: int = 2;

// reject extern variables with initializers
//
// tmp.zig:1:23: error: extern variables have no initializers
